messaging_app/messaging_app/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-web-blue
  labels:
    app: messaging-web
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-web
      version: blue
  template:
    metadata:
      labels:
        app: messaging-web
        version: blue
    spec:
      containers:
        - name: messaging-web
          image: messaging_web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
