messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-web-deployment
  labels:
    app: messaging-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: messaging-web
    spec:
      containers:
        - name: messaging-web
          image: messaging_web:2.0   # 🔹 Updated version
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
