messaging_app/messaging_app/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-web-green
  labels:
    app: messaging-web
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-web
      version: green
  template:
    metadata:
      labels:
        app: messaging-web
        version: green
    spec:
      containers:
        - name: messaging-web
          image: messaging_web:v2   # simulate new version
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
