messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-web-deployment
  labels:
    app: messaging-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-web
  template:
    metadata:
      labels:
        app: messaging-web
    spec:
      containers:
        - name: messaging-web
          image: messaging_web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-web-service
spec:
  selector:
    app: messaging-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
