messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: messaging-web-service
                port:
                  number: 8000
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: messaging-web-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-web-service
                port:
                  number: 8000
